<resources>
    <string name="app_name">Rocket Motor Test Stand</string>
    <string name="version">2.0.4</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="action_settings">Application Settings</string>
    <string name="bluetooth_device">bluetooth Device</string>
    <string name="teststand_config">Test stand Config</string>
    <string name="upload">Upload</string>
    <string name="dismiss_config">Dismiss</string>
    <string name="liftoff_config">Liftoff</string>
    <string name="altitude_config">Poussée</string>
    <string name="txtViewBaudRate_tooltip">Choose the test stand baud rate. Be carefull you might not be able to communicate</string>
    <string name="txtViewTestStandResolution_tooltip">Choose the Test Stand resolution.</string>
    <string name="txtViewEEpromSize_tooltip">Choose the Test Stand eeprom size depending on which eeprom is used</string>
    <string name="EndRecordTime_tooltip">Enter the recording duration</string>
    <string name="txtViewBatteryType_tooltip">Enter battery type used to make sure that we do not discharge it too much</string>
    <string name="txtViewSensorType_tooltip">Enter Sensor type used </string>
    <string name="txtTestStandUnit_tooltip">Choose the thrust units you are familiar with</string>
    <string name="altimeter_config_tab2">Test Stand Config</string>
    <string name="baudRate">Baud Rate</string>
    <string name="testStandResolution">Test stand Res</string>
    <string name="eepromSize">EEprom Size</string>
    <string name="RecordingTimeOut">Record timeout (in secs)</string>
    <string name="BatteryType">Battery Type</string>
    <string name="config_unknown">unknown</string>
    <string name="config_on">On</string>
    <string name="config_off">Off</string>
    <string name="teststand_config_tab3">Test Stand Config</string>
    <string name="teststand_name">Test stand Name</string>
    <string name="units">Units</string>
    <string name="unit_kg">Kg</string>
    <string name="unit_pound">Pounds</string>
    <string name="unit_newtons">Newtons</string>
    <string name="teststand_settings">Settings</string>
    <string name="read_thrustCurves">Thrust\nCurves</string>
    <string name="reset_settings">Reset\nsettings</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="telemetry">Telemetry</string>
    <string name="flash">Flash</string>
    <string name="select_device_to_use">Select Device to use</string>
    <string name="show_paired_devices">Show Paired Devices</string>
    <string name="thrust_time">Thrust / Time</string>
    <string name="close">Close</string>
    <string name="dismiss_reset">Dismiss</string>
    <string name="clear_thrustCurves">Clear Thrust Curves</string>
    <string name="reset_msg1">You are about to erase all thrust curves data, are you sure you want to do it?</string>
    <string name="reset_msg2">You are about to reset your test stand config, are you sure you want to do it?</string>
    <string name="reset_msg3">You are about to erase your last thrust curve, are you sure you want to do it?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="BT_msg1">Bluetooth Device Not Available</string>
    <string name="BT_msg2">No Paired Bluetooth Devices Found.</string>
    <string name="MS_msg1">Connecting...</string>
    <string name="MS_msg2">Please wait!!!</string>
    <string name="MS_msg3">Connection Failed. Is it a SPP Bluetooth? Try again.</string>
    <string name="MS_msg4">Connected.</string>
    <string name="those_functions_will_reset_the_teststand">Those functions will reset the test stand</string>
    <string name="restore_teststand_config">Restore Test stand config</string>
    <string name="ThrustCurves_list">Thrust curves List</string>
    <string name="title_activity_thrustCurve_list">Thrust curves List</string>
    <string name="dismiss_thrustCurve_list">Dismiss</string>
    <string name="about_screen">About</string>
    <string name="teststand_version">Rocket test stand version</string>
    <string name="dismiss_about">Dismiss</string>
    <string name="msg3">Config successfully uploaded</string>
    <string name="msg4">Failed to upload config</string>
    <string name="msg5">Retrieving Test stand config...</string>
    <string name="msg6">Please wait!!!</string>
    <string name="msg7">Retrieving thrust curves...</string>
    <string name="msg8">Please wait!!!</string>
    <string name="msg9">You have changed the baud rate, the test stand might not be able to connect. Are you sure?</string>
    <string name="Kg_fview">Kg</string>
    <string name="Pounds_fview">Pounds</string>
    <string name="Newtons_fview">Newtons</string>
    <string name="Thrust_time">Thrust / Time</string>
    <string name="Time_fv">Time (ms)</string>
    <string name="Thrust">Thrust</string>
    <string name="dismiss_thrustCurve_list_view">Dismiss</string>
    <string name="titre_application_pref">Application preferences</string>
    <string name="save_config">Save</string>
    <string name="dismiss_app_config">Dismiss</string>
    <string name="application_langage_config">Application langage</string>
    <string name="graph_color_config">Graph color</string>
    <string name="application_units_config">Thrust Units</string>
    <string name="graph_back_color_config">Graph back color</string>
    <string name="default_config">Default</string>
    <string name="font_size">Font Size</string>
    <string name="title_activity_settings">Settings</string>
    <string name="baud_rate">Baud Rate</string>
    <string name="connection_type">Connection Type</string>
    <string name="graphiclib_type">Graphics lib </string>
    <string name="FullUSBSupport">Full USB Support</string>
    <string name="color_black">BLACK</string>
    <string name="color_white">WHITE</string>
    <string name="color_magenta">MAGENTA</string>
    <string name="color_blue">BLUE</string>
    <string name="color_yellow">YELLOW</string>
    <string name="color_green">GREEN</string>
    <string name="color_gray">GRAY</string>
    <string name="color_cyan">CYAN</string>
    <string name="color_dkgray">DKGRAY</string>
    <string name="color_ltgray">LTGRAY</string>
    <string name="color_red">RED</string>
    <string name="phone_english">English</string>
    <string name="phone_french">French</string>
    <string name="phone_language">Phone language</string>
    <string name="config_unit_kg">Kg</string>
    <string name="config_unit_pounds">Pounds</string>
    <string name="config_unit_newtons">Newtons</string>
    <string name="general_config">General</string>
    <string name="telemetry_config">Telemetry config</string>
    <string name="stop_telemetry">Stop Telemetry</string>
    <string name="start_telemetry">Start Telemetry</string>
    <string name="current_phase">Current Phase</string>
    <string name="thrust">Thrust</string>
    <string name="event_time">Event Time</string>
     <string name="current_thrust">Current Thrust</string>
     <string name="dis">disconnect</string>
    <string name="title_activity_teststand_status">Test Stand Status</string>
    <string name="teststand_status">Test Stand status</string>
    <string name="teststand_status_disabled">Disabled</string>
    <string name="teststand_status_current_thrust">Current thrust</string>
    <string name="teststand_status_battery_voltage">Battery voltage</string>
    <string name="teststand_status_link_type">Link type</string>
    <string name="teststand_status_bluetooth">Bluetooth</string>
    <string name="status">Status</string>
    <string name="disabled">Disabled</string>
    <string name="msg10">Flashing firmware...</string>
    <string name="msg11">Please wait!!!</string>
    <string name="msg12">Upload: </string>
    <string name="msg13">Cannot open</string>
    <string name="msg14">Upload : Start \n</string>
    <string name="msg15">Upload: Failed\n</string>
    <string name="msg16">Upload: Successful\n</string>
    <string name="msg17">Cancel uploading\n</string>
    <string name="msg18">Error: </string>
    <string name="msg19">Flashing recover firmware...: </string>
    <string name="firmware_cancel">Cancel</string>
    <string name="firmware_dismiss">Dismiss</string>
    <string name="recover_firmware">Recover Firmware</string>
    <string name="flash_firmware">Flash Firmware</string>
    <string name="select_altimeter_model">Select your test stand model:</string>
    <string name="after_complete_upload">After the upload is complete you will be able to flash the real firmware</string>
    <string name="detect_firmware">Detect firmware</string>
    <string name="msg_detect_firmware">Attempting to Detect firmware!!!</string>
    <string name="flight_list_cancel">Cancel</string>
    <string name="flight_retrieval_canceled">Thrust curve retrieval has been canceled by user</string>
    <string name="flight_have_been_recorded">No thrust curves have been recorded</string>
    <string name="main_screen_actity">Cancel</string>
    <string name="thrustcurve">Thrust Curve</string>
    <string name="title_activity_flight_view_tab">FlightViewTabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="thrustcurve_info">Thrust Curve Info</string>
    <string name="recording_duration">Recording duration</string>
    <string name="thrust_duration">Thrust Duration</string>
    <string name="max_thrust">Max thrust</string>
    <string name="average_thrust">Average Thrust</string>
    <string name="total_impulse">Total impulse</string>
    <string name="motor_class">Motor class</string>
    <string name="curve_nbr">Thrust Curve nbr</string>
    <string name="nbr_of_sample">Samples</string>
    <string name="select_curve">Select Curve</string>
    <string name="fv_ok">OK</string>
    <string name="fv_cancel">Cancel</string>
    <string name="unit_time">time (ms)</string>
    <string name="curve_thrust">thrust</string>
    <string name="thrustcurve_name">Thrust Curve</string>
    <string name="select_bluetooth_device">Select Bluetooth device</string>
    <string name="telemetry_screen">Telemetry</string>
    <string name="status_screen">Status</string>
    <string name="calibrate_tabconfig">Calibrate</string>
    <string name="calibration_weight">Calibration Weight (kg)</string>
    <string name="calibration_offset">Calibration offset</string>
    <string name="calibration_factor">Calibration factor</string>
    <string name="export_to_csv">Export to CSV</string>
    <string name="export_to_eng">Export to ENG</string>
    <string name="n_secs">N/secs</string>
    <string name="m3DR_load_cfg">Loading 3DR module configuration</string>
    <string name="m3DR_retrieving_cfg">Retrieving config</string>
    <string name="m3DR_no_errors">No error saving the data\n Running AT&amp;W</string>
    <string name="m3DR_we_have_errors">We have an error\n not saving\n Please try again</string>
    <string name="m3DR_saving_cancelled">Saving has been cancelled</string>
    <string name="m3DR_run_command">Running command </string>
    <string name="m3DR_cancel_retrieve">Cancelling retrieve</string>
    <string name="m3DR_run_at0">Running command AT0 to exit AT mode</string>
    <string name="m3DR_run_save">Running Saving commands</string>
    <string name="m3DR_save_cfg">Saving config</string>
    <string name="m3DR_Cancel">Cancel</string>
    <string name="delete_last_thrust_curve">Delete Last Thrust Curve</string>
    <string name="sensor_type">CH1 Sensor type</string>
    <string name="flash_firmware_but">Flash firmware</string>
    <string name="current_pressure_ch1">Current pressure CH1:</string>
    <string name="telemetry_type">Telemetry type</string>
    <string name="ch2_sensor_type">CH2 Sensor type</string>
    <string name="current_pressure_ch2">Current pressure CH2:</string>
</resources>