<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainScreenActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teststand_settings"
        android:id="@+id/butAltiSettings"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_thrustCurves"
        android:id="@+id/butReadFlight"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/butAltiSettings"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telemetry"
        android:id="@+id/butTelemetry"
        android:layout_below="@+id/butReadFlight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_settings"
        android:id="@+id/butReset"

        android:layout_marginTop="21dp"
        android:layout_below="@+id/butTelemetry"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/butStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butReset"
        android:layout_marginTop="21dp"
        android:layout_centerHorizontal="true"

        android:text="@string/status" />

    <Button
        android:id="@+id/butFlashFirmware"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butStatus"
        android:layout_marginTop="21dp"
        android:layout_centerHorizontal="true"
        android:text="@string/flash_firmware_but" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect"
        android:id="@+id/butDisconnect"
        android:layout_marginTop="21dp"

        android:layout_below="@+id/butFlashFirmware"
        android:layout_centerHorizontal="true" />




</RelativeLayout>
