<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    tools:context=".ResetSettingsActivity">

    <Button
        android:id="@+id/butDismiss"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:icon="@drawable/ok_30x30_trans" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_thrustCurves"
        android:id="@+id/butClearThrustCurves"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp" />
    <Button
        android:id="@+id/butDeleteLastCurve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/butClearThrustCurves"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:text="@string/delete_last_thrust_curve" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restore_teststand_config"
        android:id="@+id/butRestoreTestStandCfg"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/those_functions_will_reset_the_teststand"
        android:id="@+id/txtViewTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
