<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".telemetry.TestStandStatus">


    <TextView
        android:id="@+id/txtViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/teststand_status"
        android:textSize="18sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teststand_status_current_thrust"
        android:id="@+id/txtViewCurrentThrust"
        android:layout_below="@+id/txtViewTitle"
        android:layout_alignParentLeft="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewThrust"
        android:text="0"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtViewTitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teststand_status_battery_voltage"
        android:id="@+id/txtViewBatteryVoltage"
        android:layout_below="@+id/txtViewCurrentThrust"
        android:layout_alignParentLeft="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewVoltage"
        android:text="0"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtViewCurrentThrust"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="EEprom"
        android:id="@+id/txtViewEEprom"
        android:layout_below="@+id/txtViewBatteryVoltage"
        android:layout_alignParentLeft="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewEEpromUsage"
        android:text="0 %"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtViewBatteryVoltage"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thrustcurve"
        android:id="@+id/txtViewThrustCurve"
        android:layout_below="@+id/txtViewEEpromUsage"
        android:layout_alignParentLeft="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewNbrOfThrustCurve"
        android:text="0"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtViewEEpromUsage"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teststand_status_link_type"
        android:id="@+id/txtViewLinkType"
        android:layout_below="@+id/txtViewThrustCurve"
        android:layout_alignParentLeft="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewLink"
        android:text="@string/teststand_status_bluetooth"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtViewThrustCurve"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current pressure"
        android:id="@+id/txtViewCurrentPressure"
        android:layout_below="@+id/txtViewLinkType"
        android:layout_alignParentLeft="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewCurrentPressureValue"
        android:text="0"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtViewLinkType"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tare"
        android:id="@+id/butTare"
        android:layout_below="@+id/txtViewCurrentPressure"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dismiss_about"
        android:id="@+id/butDismiss"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
         />
    <Button
        android:id="@+id/butRecording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="Recording" />
</RelativeLayout>